reviewed print css rules to avoid cut off text à end of page

--- a/files/css/cv.css
+++ b/files/css/cv.css
@@ -196,6 +196,7 @@ a:visited {
 @media print {
    body {
       text-align: justify;
+      overflow: visible;
    }
    
    .form {
